# dejong

./: README.md  dejong.cabal
.stack-work/install/x86_64-osx/lts-5.17/7.10.3/flag-cache/: dejong-0.1.0.0-7810b4bb94bf64e29f2ec97a6c7b619c  dejong-0.1.0.0-c97686bbeba25ce301daa8d3f9141db2  dejong-0.1.0.0-d4efd6ad296d630151dd94325335af17
.stack-work/install/x86_64-osx/lts-5.17/7.10.3/lib/x86_64-osx-ghc-7.10.3/dejong-0.1.0.0-ArrETO7fLCKDnVObK0NxeK/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-5.17/7.10.3/lib/x86_64-osx-ghc-7.10.3/dejong-0.1.0.0-Dp2NKuRTx2R4UwNLxUwN2Z/: Lib.dyn_hi  Lib.hi  libHSdejong-0.1.0.0-Dp2NKuRTx2R4UwNLxUwN2Z-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.17/7.10.3/lib/x86_64-osx-ghc-7.10.3/dejong-0.1.0.0-JnSHRxoUdgqA6fXLOTCgKE/: Lib.dyn_hi  Lib.hi  libHSdejong-0.1.0.0-JnSHRxoUdgqA6fXLOTCgKE-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.17/7.10.3/pkgdb/: dejong-0.1.0.0-635f8ac98158821d33d0c4b866f7a639.conf  package.cache
app/: Main.hs
src/: BaseGene.hs  Common.hs  CoupleGene.hs  Lib.hs  Lib.hs.bkp
