name:                dejong
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dejong#readme
license:             BSD3
license-file:        LICENSE
author:              Miki Fossati
maintainer:          miki@improntenelweb.it
copyright:           2016 Miki Fossati
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Common
  --other-modules:       Common
  build-depends:       base >= 4.7 && < 5
                     , random
                     , mtl
  default-language:    Haskell2010

executable dejong
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dejong
  default-language:    Haskell2010

test-suite dejong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dejong
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dejong